Fix panel scrollbar and left-hand spacing

--- a/ui/index.css
+++ b/ui/index.css
@@ -5,7 +5,8 @@ html * {
 }
 
 html {
-  overflow: hidden;
+  overflow: auto;
+  scrollbar-color: rgb(97, 97, 133) rgba(0, 0, 0, 0);
 }
 
 body {
