--- a/ui/panel/panel.css
+++ b/ui/panel/panel.css
@@ -1,11 +1,10 @@
 .panel {
-  height: 150px;
+  height: auto;
+  margin-left: 8px
 }
   
 .panel-body {
-  height: 150px;
-  overflow: auto;
-  scrollbar-color: rgb(97, 97, 133) rgba(0, 0, 0, 0);
+  height: auto;
 }
 
 .row{
@@ -22,7 +21,6 @@
 }
 
 .row button{
-  margin-left: 2px ;
   width: 17px;
   height: 17px;
   border-radius: 8.5em;
